BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Sample_Inventory_vod__c.object
<CustomObject>
    <description>Sample Inventory represents the header record for a physical inventory of all Sample Lots for a specific user.</description>
    <fields>
        <fullName>Audit_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Audit checkbox represents a field to designate of the Sample Inventory being conducted is a yearly Audit.  Access to be controlled by Field Level Security</description>
        <label>Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMS_Code_ID_BMS_SHARED__c</fullName>
        <label>BMS Code ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Country_Code_BMS_SHARED__c</fullName>
        <description>VPRO BMS EMEA 6-Feb-2014: created the field, used by any Region, sourced from the User Source Country field.</description>
        <formula>TEXT( Owner:User.User_Source_Country_BMS_CORE__c )</formula>
        <label>BMS Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Territory_ID_BMS_SHARED__c</fullName>
        <label>BMS Territory ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_BMS_SHARED__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: User District stamp field via workflow for Sampling team. Used for reporting only.</description>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID_BMS_SHARED__c</fullName>
        <formula>Inventory_For_vod__r.BMS_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMS Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Date_Time_vod__c</fullName>
        <description>The User entered Date and time that the Inventory count occured.  This is the effective date of the Sample Inventory counts.</description>
        <label>Inventory Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inventory_For_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory For represents the User that the physical inventory is being conducted for.  Selection of the Inventory For fields determines the User that the Sample Inventory Line Items that will be displayed.</description>
        <label>Inventory For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Inventory_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_From_Date_vod__c</fullName>
        <description>Inventory From Date is the Date of the last Submitted Inventory.  The Inventory From Date is populated from the Submitted Date of the most recently Submitted Sample Inventory.</description>
        <label>Inventory From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inventory_Type_vod__c</fullName>
        <description>Inventory Type represents the type of physical inventory being conducted.</description>
        <label>Inventory Type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year-end</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close-Out Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Inventory_BMS_EMEA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO - February 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field to denote if an inventory record was entered by a manager.  This field is only editable by manager-level users.</description>
        <label>Manager Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Time when the sample inventory was created on a mobile device.  Will be blank it if was created online.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Time when the sample inventory was last modified on a mobile device.</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Sample_Lots_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, a User is able to Save/Submit a Sample Inventory when there are no Sample Inventory Line Items [Sample Lots] for the User.</description>
        <inlineHelpText>If checked, a User is able to Save/Submit a Sample Inventory when there are no Sample Inventory Line Items [Sample Lots] for the User.</inlineHelpText>
        <label>Zero Inventory Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Inventory_Date_Time_vod__c</fullName>
        <description>The Previous Inventory Date Time field is a system generated Datetime that is based upon the last submitted Inventory and the value of the Inventory Date Time field.</description>
        <label>Previous Inventory Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region_BMS_SHARED__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: User Region stamp field via workflow for Sampling team. Used for reporting only.</description>
        <label>Territory Region Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Force_ID_BMS_SHARED__c</fullName>
        <label>Sales Force ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Force_Name_BMS_SHARED__c</fullName>
        <label>Sales Force Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status represents the current status of the Inventory.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Date_vod__c</fullName>
        <description>Submitted Date is the date that the Inventory has been Submitted.</description>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the inventory been submitted.  Default value is false.</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_BMS_SHARED__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: User Territory stamp field via workflow for Sampling team. Used for reporting only.</description>
        <label>Territory Intelligent ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Business_Code_BMS_SHARED__c</fullName>
        <label>Territory Business Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Function_Code_BMS_SHARED__c</fullName>
        <label>Territory Function Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Area_Code_BMS_SHARED__c</fullName>
        <label>Territory Sales Area Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Type_BMS_SHARED__c</fullName>
        <label>Territory Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Inventory_Count_BMS_SHARED__c</fullName>
        <description>Count of all sample quantities recorded in the inventory. Used for the validation rule based on the zero inventory count field.</description>
        <label>Total Inventory Count</label>
        <summarizedField>Sample_Inventory_Item_vod__c.Count_vod__c</summarizedField>
        <summaryForeignKey>Sample_Inventory_Item_vod__c.Inventory_Name_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unlock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unlock checkbox is used by the VBioPharma application to determine if a user has access to Unlock a Sample Inventory that has been Submitted.  Access is controlled by Field Level security on the Unlock checkbox.</description>
        <label>Unlock</label>
        <type>Checkbox</type>
    </fields>
    <label>Sample Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Inventory_Type_vod__c</columns>
        <columns>Status_vod__c</columns>
        <columns>Submitted_Date_vod__c</columns>
        <columns>Inventory_From_Date_vod__c</columns>
        <columns>Inventory_For_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INV-{000000000}</displayFormat>
        <label>Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Inventories</pluralLabel>
    <recordTypes>
        <fullName>External_Inventory_BMS_US</fullName>
        <active>true</active>
        <description>Inventory specific to external inventory vendors</description>
        <label>External Inventory</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Inventory_BMS_US</fullName>
        <active>true</active>
        <description>Inventory record type for all users</description>
        <label>General Inventory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Management_Inventory_BMS_US</fullName>
        <active>true</active>
        <description>Inventory record type for all managers</description>
        <label>Management Inventory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rep_Inventory_BMS_US</fullName>
        <active>true</active>
        <description>Inventory record type for all reps</description>
        <label>Rep Inventory</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>